@@ -1,16 +1,16 @@
 
 import logging
-#import xbmc # @UnresolvedImport
+import xbmc  # @UnresolvedImport
 
 def logInfo(message):
     if type(message) is not str:
         message = str(message)
-#     xbmc.log(message, xbmc.LOGINFO)
+    xbmc.log(message, xbmc.LOGINFO)
 
 def logDebug(message):
     if type(message) is not str:
         message = str(message)
-#     xbmc.log(message, xbmc.LOGDEBUG)
+    xbmc.log(message, xbmc.LOGDEBUG)
     
 def logError(message):
     logging.exception(message)
@@ -21,7 +21,7 @@ def logFatal(message):
 def logNotice(message):
     if type(message) is not str:
         message = str(message)
-#     xbmc.log(message, xbmc.LOGNOTICE)
+    xbmc.log(message, xbmc.LOGNOTICE)
     
 def logSevere(message):
     logging.exception(message)
@@ -32,6 +32,6 @@ def logWarning(message):
             logging.exception(message)
             return
         message = str(message)
-#     xbmc.log(message, xbmc.LOGWARNING)
+    xbmc.log(message, xbmc.LOGWARNING)
         
 
